--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@handsontable/react": "^11.1.0",
+    "handsontable": "^11.1.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
