--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@handsontable/react": "^11.1.0",
+    "@silevis/reactgrid": "^4.0.3",
     "handsontable": "^11.1.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
