--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@handsontable/react": "^11.1.0",
     "@silevis/reactgrid": "^4.0.3",
+    "@tanstack/react-table": "^8.0.0-alpha.1",
+    "@types/react-table": "^7.7.9",
     "handsontable": "^11.1.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-datasheet": "^1.4.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-spreadsheet": "^0.6.1",
+    "react-table": "^7.7.0",
     "scheduler": "^0.20.2"
   },
   "devDependencies": {
