--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "@handsontable/react": "^11.1.0",
     "@silevis/reactgrid": "^4.0.3",
     "@tanstack/react-table": "^8.0.0-alpha.1",
+    "@tanstack/react-table-devtools": "^8.0.0-alpha.1",
+    "@types/faker": "^6.6.9",
     "@types/react-table": "^7.7.9",
+    "faker": "^6.6.6",
     "handsontable": "^11.1.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
